--- a/DNa SF Bike/index.html
+++ b/DNa SF Bike/index.html
@@ -18,6 +18,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.13.0/d3.min.js"></script>
     <script type="text/javascript"></script>
     <script src="test.js"></script>
+    <!-- <link rel="stylesheet" type="text/css" href="static/style.css"> -->
     <script type="text/javascript" src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
     </head>
     <body>
@@ -44,8 +45,8 @@
 
         <div id="tabs" style="height: 100px">
             <ul>
-                <li ><a href="#tabs-1"  style="font-size: 12px">Weather: Temp/Dew/Humidity (Avg)</a></li>
-                <li ><a href="#tabs-2"  style="font-size: 12px">Weather: Temp/Dew/Humidity (Max)</a></li>
+                <li ><a href="#tabs-1"  style="font-size: 12px">Weather: Temp/Dew/Humidity (Max)</a></li>
+                <li ><a href="#tabs-2"  style="font-size: 12px">Weather: Temp/Dew/Humidity (Avg)</a></li>
                 <li ><a href="#tabs-3"  style="font-size: 12px">Weather: Temp/Dew/Humidity (Min)</a></li>
                 <li ><a href="#tabs-4"  style="font-size: 12px">Weather: Visibility</a></li>
                 <li ><a href="#tabs-5"  style="font-size: 12px">Weather: Wind Speed</a></li>
@@ -70,6 +71,7 @@
                 <div id="chartContainer6" style="height: 300px; width: 100%;"></div>
             </div>
         </div>
+        
     <script src="https://canvasjs.com/assets/script/jquery-1.11.1.min.js"></script>
     <script src="https://canvasjs.com/assets/script/jquery-ui.1.11.2.min.js"></script>
     <script src="https://canvasjs.com/assets/script/jquery.canvasjs.min.js"></script>
